@@ -61,7 +61,7 @@
 \section{How to cite this package}{
  Bengtsson H (2019).
 \emph{R.rsp: Dynamic Generation of Scientific Reports}.
-R package version 0.43.1, \url{https://github.com/HenrikBengtsson/R.rsp}.
+R package version 0.43.1-9000, \url{https://github.com/HenrikBengtsson/R.rsp}.
 }
 
 \author{Henrik Bengtsson}
